apps/api-server/k8s/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: ashiwani-perfosnal-protfolia-api
  namespace: ashiwani-perfosnal-protfolia
  labels:
    app: ashiwani-perfosnal-protfolia-api
    app.kubernetes.io/name: ashiwani-perfosnal-protfolia-api
    app.kubernetes.io/part-of: ashiwani-perfosnal-protfolia
spec:
  replicas: 1
  selector:
    matchLabels:
      app: ashiwani-perfosnal-protfolia-api
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxSurge: 1
      maxUnavailable: 0
  template:
    metadata:
      labels:
        app: ashiwani-perfosnal-protfolia-api
        app.kubernetes.io/name: ashiwani-perfosnal-protfolia-api
        app.kubernetes.io/part-of: ashiwani-perfosnal-protfolia
    spec:
      containers:
      - name: ashiwani-perfosnal-protfolia-api
        image: 172.16.100.33:8083/ashiwani-perfosnal-protfolia-api:latest
        imagePullPolicy: Always
        ports:
        - name: http
          containerPort: 3301
        resources:
          requests:
            memory: "256Mi"
            cpu: "100m"
          limits:
            memory: "768Mi"
            cpu: "500m"
        livenessProbe:
          httpGet:
            path: /api/v1/healthCheck
            port: 3301
          initialDelaySeconds: 45
          periodSeconds: 20
          failureThreshold: 3
          timeoutSeconds: 10
        readinessProbe:
          httpGet:
            path: /api/v1/healthCheck
            port: 3301
          initialDelaySeconds: 30
          periodSeconds: 10
          failureThreshold: 3
          timeoutSeconds: 10
      imagePullSecrets:
      - name: nexus-registry-secret
